--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,21 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title></title>
+	<title>contestVII_ms</title>
+	<link rel="stylesheet" href="css/common.css"/>
 </head>
 <body>
+	<section class="first-section">
+		<div class="left-side">
+			<h1>IT Confe rence ия</h1>
+			<h2>12 - 18  апреля	</h2>
+			<a class="buy-ticket big" href="#">
+				купить билет
+			</a>
+		</div>
+		<div class="right-side">
 
+		</div>
+	</section>
 </body>
 </html>
