--- a/www/index.html
+++ b/www/index.html
@@ -8,15 +8,24 @@
 <body>
 	<section class="first-section">
 		<div class="left-side">
-			<h1>IT Confe rence ия</h1>
-			<h2>12 - 18  апреля	</h2>
-			<a class="buy-ticket big" href="#">
+			<div class="left-side--inner">
+				<h1><span class="f-uthin">IT<br></span><span class="f-ublack">Confe<br>rence<br></span><span class="f-uthin">и</span><span class="f-ublack">я</span>
+					<span class="date">
+						12 - 18  апреля
+					</span>
+				</h1>
+				<a class="buy-ticket big ublack" href="#">
 				купить билет
-			</a>
+				</a>
+				<p class="f-light">... у нас интересней всего &#169;Женя</p>
+			</div>
 		</div>
 		<div class="right-side">
 
 		</div>
+	</section>
+	<section class="second-section">
+		123
 	</section>
 </body>
 </html>
